--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 # datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/todo_list
-spring.datasource.username=root
-spring.datasource.password=admin123
+spring.datasource.url=jdbc:mysql://us-cdbr-east-04.cleardb.com/heroku_d7ae467666f52e3
+spring.datasource.username=bbca1c7ebc89e6
+spring.datasource.password=4d25062b
 
-# jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
